--- a/public/styles.css
+++ b/public/styles.css
@@ -238,6 +238,11 @@ p{
         margin-bottom: 10px;
         margin-top: 10px;
         margin-left: 55px;
+        width: 50%;
+    }
+
+    .search-box{
+        width: 80%;
     }
 
     .navbar-page-loc{
@@ -265,7 +270,7 @@ p{
     }
 
     .content{
-        padding: 12% 10%;
+        padding: 20% 10% 5%;
     }
 
     h1{
